Update C++ API Docs

--- a/cpp-api/classinviwo_1_1PropertyOwnerObservable.html
+++ b/cpp-api/classinviwo_1_1PropertyOwnerObservable.html
@@ -166,14 +166,15 @@ $(function(){initNavTree('classinviwo_1_1PropertyOwnerObservable.html',''); init
 <area href="classinviwo_1_1TextOverlayProperty.html" alt="inviwo::TextOverlayProperty" shape="rect" coords="392,2240,774,2264"/>
 <area href="classinviwo_1_1Trackball.html" alt="inviwo::Trackball" shape="rect" coords="392,2296,774,2320"/>
 <area href="classinviwo_1_1TransformListProperty.html" alt="inviwo::TransformListProperty" shape="rect" coords="392,2352,774,2376"/>
-<area href="classinviwo_1_1plot_1_1AxisStyleProperty.html" title="A convenience property for updating/overriding multiple axes properties. A property change will propa..." alt="inviwo::plot::AxisStyleProperty" shape="rect" coords="392,2408,774,2432"/>
-<area href="classinviwo_1_1plot_1_1BoxSelectionProperty.html" title="Settings for rectangle selection/filtering." alt="inviwo::plot::BoxSelectionProperty" shape="rect" coords="392,2464,774,2488"/>
-<area href="classinviwo_1_1plot_1_1CategoricalAxisProperty.html" title="Axis for variables with a fixed number of possible values, e.g., categories. Will set the AxisPropert..." alt="inviwo::plot::CategoricalAxisProperty" shape="rect" coords="392,2520,774,2544"/>
-<area href="classinviwo_1_1plot_1_1MajorTickProperty.html" alt="inviwo::plot::MajorTickProperty" shape="rect" coords="392,2576,774,2600"/>
-<area href="classinviwo_1_1plot_1_1MinorTickProperty.html" alt="inviwo::plot::MinorTickProperty" shape="rect" coords="392,2632,774,2656"/>
-<area href="classinviwo_1_1plot_1_1PersistenceDiagramPlotGL_1_1Properties.html" alt="inviwo::plot::PersistenceDiagramPlotGL::Properties" shape="rect" coords="392,2688,774,2712"/>
-<area href="classinviwo_1_1plot_1_1ScatterPlotGL_1_1Properties.html" alt="inviwo::plot::ScatterPlotGL::Properties" shape="rect" coords="392,2744,774,2768"/>
-<area href="classinviwo_1_1transform_1_1TransformProperty.html" alt="inviwo::transform::TransformProperty" shape="rect" coords="392,2800,774,2824"/>
+<area href="classinviwo_1_1ValueAxisProperty.html" alt="inviwo::ValueAxisProperty" shape="rect" coords="392,2408,774,2432"/>
+<area href="classinviwo_1_1plot_1_1AxisStyleProperty.html" title="A convenience property for updating/overriding multiple axes properties. A property change will propa..." alt="inviwo::plot::AxisStyleProperty" shape="rect" coords="392,2464,774,2488"/>
+<area href="classinviwo_1_1plot_1_1BoxSelectionProperty.html" title="Settings for rectangle selection/filtering." alt="inviwo::plot::BoxSelectionProperty" shape="rect" coords="392,2520,774,2544"/>
+<area href="classinviwo_1_1plot_1_1CategoricalAxisProperty.html" title="Axis for variables with a fixed number of possible values, e.g., categories. Will set the AxisPropert..." alt="inviwo::plot::CategoricalAxisProperty" shape="rect" coords="392,2576,774,2600"/>
+<area href="classinviwo_1_1plot_1_1MajorTickProperty.html" alt="inviwo::plot::MajorTickProperty" shape="rect" coords="392,2632,774,2656"/>
+<area href="classinviwo_1_1plot_1_1MinorTickProperty.html" alt="inviwo::plot::MinorTickProperty" shape="rect" coords="392,2688,774,2712"/>
+<area href="classinviwo_1_1plot_1_1PersistenceDiagramPlotGL_1_1Properties.html" alt="inviwo::plot::PersistenceDiagramPlotGL::Properties" shape="rect" coords="392,2744,774,2768"/>
+<area href="classinviwo_1_1plot_1_1ScatterPlotGL_1_1Properties.html" alt="inviwo::plot::ScatterPlotGL::Properties" shape="rect" coords="392,2800,774,2824"/>
+<area href="classinviwo_1_1transform_1_1TransformProperty.html" alt="inviwo::transform::TransformProperty" shape="rect" coords="392,2856,774,2880"/>
 <area href="classinviwo_1_1DataExport.html" alt="inviwo::DataExport&lt; Layer, ImageInport &gt;" shape="rect" coords="1176,280,1558,304"/>
 <area href="classinviwo_1_1DataExport.html" alt="inviwo::DataExport&lt; Mesh, MeshInport &gt;" shape="rect" coords="1176,336,1558,360"/>
 <area href="classinviwo_1_1DataExport.html" alt="inviwo::DataExport&lt; Volume, VolumeInport &gt;" shape="rect" coords="1176,392,1558,416"/>
