--- a/cpp-api/doxygen_crawl.html
+++ b/cpp-api/doxygen_crawl.html
@@ -4176,6 +4176,15 @@
 <a href="classinviwo_1_1UnitSettings.html"/>
 <a href="classinviwo_1_1UserInterfaceGLModule-members.html"/>
 <a href="classinviwo_1_1UserInterfaceGLModule.html"/>
+<a href="classinviwo_1_1ValueAxisProperty-members.html"/>
+<a href="classinviwo_1_1ValueAxisProperty.html"/>
+<a href="classinviwo_1_1ValueAxisProperty.html#a02e4c6c459821b66f7aa5e31f6e9a379"/>
+<a href="classinviwo_1_1ValueAxisProperty.html#a3d4fff999a9ebc24a3c746261614b0e4"/>
+<a href="classinviwo_1_1ValueAxisProperty.html#a4dbff83c3f4f7618db6f7c0edb2ceb6c"/>
+<a href="classinviwo_1_1ValueAxisProperty.html#aa1cd66be18f21a801fadb9a6842ef80c"/>
+<a href="classinviwo_1_1ValueAxisProperty.html#abe3243c2aca7df75477c8cb261517e7f"/>
+<a href="classinviwo_1_1ValueAxisProperty.html#ac1c43fda44e35f8852f9a734a5b0eca9"/>
+<a href="classinviwo_1_1ValueAxisProperty.html#af6d0737898c1493103461073becc1fe4"/>
 <a href="classinviwo_1_1ValueDragSpinBox-members.html"/>
 <a href="classinviwo_1_1ValueDragSpinBox.html"/>
 <a href="classinviwo_1_1ValueDragSpinBox.html#a27ddf163c051d7e425d9d989c46cc293"/>
