--- a/cpp-api/classinviwo_1_1CompositePropertyObservable.html
+++ b/cpp-api/classinviwo_1_1CompositePropertyObservable.html
@@ -159,14 +159,15 @@ $(function(){initNavTree('classinviwo_1_1CompositePropertyObservable.html',''); 
 <area href="classinviwo_1_1TextOverlayProperty.html" alt="inviwo::TextOverlayProperty" shape="rect" coords="315,2184,620,2208"/>
 <area href="classinviwo_1_1Trackball.html" alt="inviwo::Trackball" shape="rect" coords="315,2240,620,2264"/>
 <area href="classinviwo_1_1TransformListProperty.html" alt="inviwo::TransformListProperty" shape="rect" coords="315,2296,620,2320"/>
-<area href="classinviwo_1_1plot_1_1AxisStyleProperty.html" title="A convenience property for updating/overriding multiple axes properties. A property change will propa..." alt="inviwo::plot::AxisStyleProperty" shape="rect" coords="315,2352,620,2376"/>
-<area href="classinviwo_1_1plot_1_1BoxSelectionProperty.html" title="Settings for rectangle selection/filtering." alt="inviwo::plot::BoxSelectionProperty" shape="rect" coords="315,2408,620,2432"/>
-<area href="classinviwo_1_1plot_1_1CategoricalAxisProperty.html" title="Axis for variables with a fixed number of possible values, e.g., categories. Will set the AxisPropert..." alt="inviwo::plot::CategoricalAxisProperty" shape="rect" coords="315,2464,620,2488"/>
-<area href="classinviwo_1_1plot_1_1MajorTickProperty.html" alt="inviwo::plot::MajorTickProperty" shape="rect" coords="315,2520,620,2544"/>
-<area href="classinviwo_1_1plot_1_1MinorTickProperty.html" alt="inviwo::plot::MinorTickProperty" shape="rect" coords="315,2576,620,2600"/>
-<area href="classinviwo_1_1plot_1_1PersistenceDiagramPlotGL_1_1Properties.html" alt="inviwo::plot::PersistenceDiagramPlotGL::Properties" shape="rect" coords="315,2632,620,2656"/>
-<area href="classinviwo_1_1plot_1_1ScatterPlotGL_1_1Properties.html" alt="inviwo::plot::ScatterPlotGL::Properties" shape="rect" coords="315,2688,620,2712"/>
-<area href="classinviwo_1_1transform_1_1TransformProperty.html" alt="inviwo::transform::TransformProperty" shape="rect" coords="315,2744,620,2768"/>
+<area href="classinviwo_1_1ValueAxisProperty.html" alt="inviwo::ValueAxisProperty" shape="rect" coords="315,2352,620,2376"/>
+<area href="classinviwo_1_1plot_1_1AxisStyleProperty.html" title="A convenience property for updating/overriding multiple axes properties. A property change will propa..." alt="inviwo::plot::AxisStyleProperty" shape="rect" coords="315,2408,620,2432"/>
+<area href="classinviwo_1_1plot_1_1BoxSelectionProperty.html" title="Settings for rectangle selection/filtering." alt="inviwo::plot::BoxSelectionProperty" shape="rect" coords="315,2464,620,2488"/>
+<area href="classinviwo_1_1plot_1_1CategoricalAxisProperty.html" title="Axis for variables with a fixed number of possible values, e.g., categories. Will set the AxisPropert..." alt="inviwo::plot::CategoricalAxisProperty" shape="rect" coords="315,2520,620,2544"/>
+<area href="classinviwo_1_1plot_1_1MajorTickProperty.html" alt="inviwo::plot::MajorTickProperty" shape="rect" coords="315,2576,620,2600"/>
+<area href="classinviwo_1_1plot_1_1MinorTickProperty.html" alt="inviwo::plot::MinorTickProperty" shape="rect" coords="315,2632,620,2656"/>
+<area href="classinviwo_1_1plot_1_1PersistenceDiagramPlotGL_1_1Properties.html" alt="inviwo::plot::PersistenceDiagramPlotGL::Properties" shape="rect" coords="315,2688,620,2712"/>
+<area href="classinviwo_1_1plot_1_1ScatterPlotGL_1_1Properties.html" alt="inviwo::plot::ScatterPlotGL::Properties" shape="rect" coords="315,2744,620,2768"/>
+<area href="classinviwo_1_1transform_1_1TransformProperty.html" alt="inviwo::transform::TransformProperty" shape="rect" coords="315,2800,620,2824"/>
   </map>
 </div></div>
 <table class="memberdecls">
