Update C++ API Docs

--- a/cpp-api/doxygen_crawl.html
+++ b/cpp-api/doxygen_crawl.html
@@ -2727,6 +2727,10 @@
 <a href="classinviwo_1_1PlaneProperty-members.html"/>
 <a href="classinviwo_1_1PlaneProperty.html"/>
 <a href="classinviwo_1_1PlaneProperty.html#ab55394eab4dfc8471d9acf6c9e933df6"/>
+<a href="classinviwo_1_1PlotCamera-members.html"/>
+<a href="classinviwo_1_1PlotCamera.html"/>
+<a href="classinviwo_1_1PlotCamera.html#ab67de6f3527b3e43db17692d57442ab3"/>
+<a href="classinviwo_1_1PlotCamera.html#ac8fdc32f2ebf041da01d8270d5a15597"/>
 <a href="classinviwo_1_1PlottingGLModule-members.html"/>
 <a href="classinviwo_1_1PlottingGLModule.html"/>
 <a href="classinviwo_1_1PlottingGLModule.html#a265d929ca48dcb4af8f04c4c8c289e3f"/>
@@ -6628,6 +6632,8 @@
 <a href="structinviwo_1_1WorkspaceAnnotations_1_1Base64Image.html"/>
 <a href="structinviwo_1_1WorkspaceInfo-members.html"/>
 <a href="structinviwo_1_1WorkspaceInfo.html"/>
+<a href="structinviwo_1_1ZoomOptions-members.html"/>
+<a href="structinviwo_1_1ZoomOptions.html"/>
 <a href="structinviwo_1_1animation_1_1AnimationTimeState-members.html"/>
 <a href="structinviwo_1_1animation_1_1AnimationTimeState.html"/>
 <a href="structinviwo_1_1animation_1_1FindDivisionsResult-members.html"/>
