Update Python API Docs

--- a/python-api/genindex.html
+++ b/python-api/genindex.html
@@ -8401,8 +8401,14 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_generated/inviwopy.html#inviwopy.IvwKey.D">D (inviwopy.IvwKey attribute)</a>
 </li>
-      <li><a href="_generated/inviwopy.data.html#inviwopy.data.Buffer.data">data (inviwopy.data.Buffer property)</a>
+      <li><a href="_generated/inviwopy.html#inviwopy.ContextMenuAction.data">data (inviwopy.ContextMenuAction property)</a>
+
+      <ul>
+        <li><a href="_generated/inviwopy.html#inviwopy.ContextMenuEvent.data">(inviwopy.ContextMenuEvent property)</a>
 </li>
+        <li><a href="_generated/inviwopy.data.html#inviwopy.data.Buffer.data">(inviwopy.data.Buffer property)</a>
+</li>
+      </ul></li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.BufferTarget.Data">Data (inviwopy.data.BufferTarget attribute)</a>
 </li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.Layer.data">data (inviwopy.data.Layer property)</a>
@@ -9977,12 +9983,8 @@
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.PropertyWidget.getEditorWidget">getEditorWidget() (inviwopy.properties.PropertyWidget method)</a>
 </li>
-      <li><a href="_generated/inviwopy.html#inviwopy.ContextMenuEvent.getEvent">getEvent() (inviwopy.ContextMenuEvent method)</a>
-
-      <ul>
-        <li><a href="_generated/inviwopy.html#inviwopy.PickingEvent.getEvent">(inviwopy.PickingEvent method)</a>
+      <li><a href="_generated/inviwopy.html#inviwopy.PickingEvent.getEvent">getEvent() (inviwopy.PickingEvent method)</a>
 </li>
-      </ul></li>
       <li><a href="_generated/inviwopy.html#inviwopy.ImageReaderFactory.getExtensions">getExtensions() (inviwopy.ImageReaderFactory method)</a>
 
       <ul>
@@ -12405,14 +12407,14 @@
       </ul></li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.Mesh">Mesh (class in inviwopy.data)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_generated/inviwopy.html#inviwopy.DataReaderFactory.mesh">mesh (inviwopy.DataReaderFactory property)</a>
 
       <ul>
         <li><a href="_generated/inviwopy.html#inviwopy.DataWriterFactory.mesh">(inviwopy.DataWriterFactory property)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_generated/inviwopy.html#inviwopy.MeshDataReader">MeshDataReader (class in inviwopy)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.MeshDataWriter">MeshDataWriter (class in inviwopy)</a>
@@ -12617,8 +12619,12 @@
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.InteractionEvent.modifierNames">modifierNames() (inviwopy.InteractionEvent method)</a>
 </li>
-      <li><a href="_generated/inviwopy.html#inviwopy.PickingEvent.modifiers">modifiers (inviwopy.PickingEvent property)</a>
+      <li><a href="_generated/inviwopy.html#inviwopy.ContextMenuEvent.modifiers">modifiers (inviwopy.ContextMenuEvent property)</a>
+
+      <ul>
+        <li><a href="_generated/inviwopy.html#inviwopy.PickingEvent.modifiers">(inviwopy.PickingEvent property)</a>
 </li>
+      </ul></li>
       <li><a href="_generated/inviwopy.html#inviwopy.InteractionEvent.modifiers">modifiers() (inviwopy.InteractionEvent method)</a>
 </li>
       <li>
@@ -14347,7 +14353,11 @@
       <li><a href="_generated/inviwopy.html#inviwopy.Event.shouldPropagateTo">shouldPropagateTo() (inviwopy.Event method)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.InteractionEvent.showContextMenu">showContextMenu() (inviwopy.InteractionEvent method)</a>
+
+      <ul>
+        <li><a href="_generated/inviwopy.html#inviwopy.PickingEvent.showContextMenu">(inviwopy.PickingEvent method)</a>
 </li>
+      </ul></li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.VolumeSequence.shrink_to_fit">shrink_to_fit() (inviwopy.data.VolumeSequence method)</a>
 </li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.BitSet.shrinkToFit">shrinkToFit() (inviwopy.data.BitSet method)</a>
