Update C++ API Docs

--- a/cpp-api/doxygen_crawl.html
+++ b/cpp-api/doxygen_crawl.html
@@ -2697,6 +2697,7 @@
 <a href="classinviwo_1_1PickingEvent.html#a707cac40611c154c7a3f0f7e6b8317ee"/>
 <a href="classinviwo_1_1PickingEvent.html#a7897234e3128d81c9d8523e392024061"/>
 <a href="classinviwo_1_1PickingEvent.html#a936d0af75cb48a43472d577bba347867"/>
+<a href="classinviwo_1_1PickingEvent.html#ab1a7b9dcc189248e4e8d693415822463"/>
 <a href="classinviwo_1_1PickingEvent.html#abc16d9daf11cd94d4dc2cad109f308b5"/>
 <a href="classinviwo_1_1PickingEvent.html#adb12540c20a813efb45ddef05de6a747"/>
 <a href="classinviwo_1_1PickingEvent.html#ae11fcaa5b9269c569ea1290d7c6b97cc"/>
